--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "darkaonline/l5-swagger": "^8.5",
   "zircote/swagger-php": "^4.8",
   "laravel/framework": "^12.0",
-  "laravel/sanctum": "4.x-dev",
+  "laravel/sanctum": "^4.0",
   "laravel/ui": "^4.3",
   "maatwebsite/excel": "^3.1.64",
   "stripe/stripe-php": "^15.3",
