--- a/.gitignore
+++ b/.gitignore
@@ -16,15 +16,12 @@ public_html/storage
 public_html/hot
 
 storage/*.key
+storage/framework/cache/*.php
+storage/framework/sessions/*.php    
+storage/framework/views/*.php
+storage/logs/*.log
 .env
 Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
-
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
