--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,22 @@
   "keywords": ["framework", "laravel"],
   "license": "MIT",
   "require": {
-  "php": "^8.2",
-  "barryvdh/laravel-dompdf": "^3.1",
-  "darkaonline/l5-swagger": "^8.5",
-  "zircote/swagger-php": "^4.8",
-  "laravel/framework": "^12.0",
-  "laravel/sanctum": "^4.0",
-  "laravel/ui": "^4.3",
-  "maatwebsite/excel": "^3.1.64",
-  "stripe/stripe-php": "^15.3",
-  "jenssegers/agent": "^2.6",
-  "guzzlehttp/guzzle": "^7.5",
-  "doctrine/dbal": "^3.7",
-  "psr/simple-cache": "^3.0",
-  "laravel/tinker": "^2.9"
-},
+    "php": "^8.2",
+    "barryvdh/laravel-dompdf": "^3.1",
+    "darkaonline/l5-swagger": "^8.5",
+    "doctrine/dbal": "^3.7",
+    "guzzlehttp/guzzle": "^7.5",
+    "jenssegers/agent": "^2.6",
+    "laravel/framework": "^12.0",
+    "laravel/sanctum": "^4.0",
+    "laravel/tinker": "^2.9",
+    "laravel/ui": "^4.3",
+    "maatwebsite/excel": "^3.1.64",
+    "psr/simple-cache": "^3.0",
+    "stripe/stripe-php": "^15.3",
+    "yajra/laravel-datatables-oracle": "^12.6",
+    "zircote/swagger-php": "^4.8"
+  },
 
   "require-dev": {
     "nunomaduro/collision": "^8.4",
